# Calculator

./: pyproject.toml
src/financial_calc/: calculator.py
tests/: test_calculator.py
