[project]
name = "financial-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cersinss", email = "sanya.tverezovsky@yandex.ru" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
financial-calc = "financial_calc:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
